@@ -1,5 +1,5 @@
 #
-#   Copyright (C) 1994, 95, 96, 97, 98, 1999 Free Software Foundation, Inc.
+#   Copyright (C) 1994,95,96,97,98,99,2000 Free Software Foundation, Inc.
 #
 #   This program is free software; you can redistribute it and/or
 #   modify it under the terms of the GNU General Public License as
@@ -60,7 +60,7 @@ MIGSTUBS = fsServer.o ioServer.o fsysServer.o exec_startupServer.o \
 	startup_notifyServer.o
 OBJS = $(sort $(SRCS:.c=.o) $(MIGSTUBS))
 
-HURDLIBS=fshelp iohelp store ports threads shouldbeinlibc
+HURDLIBS = fshelp iohelp store threads ports shouldbeinlibc
 
 fsys-MIGSFLAGS = -imacros $(srcdir)/fsmutations.h -DREPLY_PORTS
 fs-MIGSFLAGS = -imacros $(srcdir)/fsmutations.h
